--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
@@ -17,6 +18,7 @@
     "jimp": "^0.22.7",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
+    "luxon": "^3.3.0",
     "mongoose": "^7.0.2",
     "morgan": "1.10.0",
     "nanoid": "^4.0.1",
