--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.35.0",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
@@ -21,6 +22,8 @@
     "luxon": "^3.3.0",
     "mongoose": "^7.0.2",
     "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^3.3.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
