--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jimp": "^0.22.7",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "luxon": "^3.3.0",
     "moment": "^2.29.4",
-
     "mongoose": "^7.0.2",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^3.3.4",
     "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.1",
     "swagger-ui-express": "^4.6.2"
   },
